# LangChain_Tutorial_1

./: .gitignore  IntroWithPydanticOutputParser.py  StrucuturedOutput.py  schemas.py
.github/: copilot-instructions.md
Section-2/: .env.example  .gitignore  first_langchain_chain.py  pyproject.toml
Section-4/: StrucuturedOutput.py  prompt.py  pyproject.toml  requirement.txt
Section-5/: .gitignore  main.py  pyproject.toml
