[project]
name = "Section-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=1.0.0",
    "langchain-core>=1.0.5",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "python-dotenv>=1.1.1",
]
